--- a/main.html
+++ b/main.html
@@ -7,9 +7,33 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<nav>
+	<ul>
+		<li ><a style="text-decoration:none" href="https://acciojob.com/">Home</a></li>
+		<li><a style="text-decoration:none" href="https://acciojob.com/iit-guwahati/cyber-security">New Course</a></li>
+		 <li><a style="text-decoration:none" href="https://course.acciojob.com/">Current Course</a></li>
+	</ul> 
+</nav>
+
+	
+
+<h1>3 random audios</h1>
+
+<audio controls>
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<audio controls>
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+ 
+<audio controls>
+  <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
 </body>
 
