--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 </audio>
 
 <audio controls>
-  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
   Your browser does not support the audio element.
 </audio>
  
